--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <h1>"NO ADMITTANCE EXCEPT ON PARTY BUSINESS" -J.R.R. Tolkien, The Lord of The Rings</h1>
         <nav>
-            <a href="papers.html">Academic Papers</a>
-            <a href="photos.html">Photography</a>
+            <a href="papers.html">Papers</a>
+            <a href="photos.html">Photos</a>
             <a href="films.html">Films</a>
         </nav>
     </header>
