Updated CSS with better layout and styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>"NO ADMITTANCE EXCEPT ON PARTY BUSINESS" -J.R.R. Tolkien, The Lord of The Rings</h1>
+        <h1>
+            <span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span>
+            <br>
+            <span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span>
+        </h1>
         <nav>
             <a href="papers.html">Papers</a>
             <a href="photos.html">Photos</a>
