Updated header color & email section styling

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         </nav>
     </header>
     <main>
-        <h2>About Me</h2>
-        <p>This is my personal website where I share my work.</p>
+        <h2 class="email">
+            ariann <em>at</em> USC <em>dot</em> edu
+        </h2>
+        <p class="usc-text">This is my personal website where I share my work.</p>
     </main>
 </body>
 </html>
