Added random text generator for Library of Babel effect

--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
 </head>
 <body>
     <header>
-        <h1>
-            <span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span>
-            <br>
-            <span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span>
-        </h1>
+        <div class="decorative-text">plvrq mweytr fksdhj lwpeirn qsdhfgv jwkxuo</div>
+        <div class="quote-container">
+            <h1>
+                <span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span>
+                <br>
+                <span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span>
+            </h1>
+        </div>
+        <div class="decorative-text">zxvopl kqwnmx ueyrtp sjdhflg pqowier jxzvnm</div>
         <nav>
             <a href="papers.html">Papers</a>
             <a href="photos.html">Photos</a>
             <a href="films.html">Films</a>
         </nav>
+        <div class="decorative-text">bczovx weiqnpo xujmrlv ytreoi jshdfga pqownm</div>
     </header>
     <main>
+        <div class="decorative-text">qpwoeirn cksjdhf zxvmop qwlert jxhzva yutiop</div>
         <h2 class="email">
-            ariann <em>at</em> USC <em>dot</em> edu
+            Ariann <em>at</em> USC <em>dot</em> edu
         </h2>
         <p class="usc-text">This is my personal website where I share my work.</p>
+        <div class="decorative-text">loremv ypqowier jxhzna pqownvm ksjdhf rtuyop</div>
     </main>
+    <script src="random-text.js"></script>
 </body>
 </html>
