--- a/index.html
+++ b/index.html
@@ -8,29 +8,27 @@
 </head>
 <body>
     <header>
-        <div class="decorative-text">plvrq mweytr fksdhj lwpeirn qsdhfgv jwkxuo</div>
-        <div class="quote-container">
-            <h1>
-                <span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span>
-                <br>
-                <span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span>
-            </h1>
-        </div>
-        <div class="decorative-text">zxvopl kqwnmx ueyrtp sjdhflg pqowier jxzvnm</div>
+        <div class="babel-line"></div>
+        <h1>
+            <span class="babel-inline"></span><span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span><span class="babel-inline"></span>
+            <br>
+            <span class="babel-inline"></span><span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span><span class="babel-inline"></span>
+        </h1>
+        <div class="babel-line"></div>
         <nav>
-            <a href="papers.html">Papers</a>
-            <a href="photos.html">Photos</a>
-            <a href="films.html">Films</a>
+            <span class="babel-inline"></span><a href="papers.html">Papers</a><span class="babel-inline"></span>
+            <a href="photos.html">Photos</a><span class="babel-inline"></span>
+            <a href="films.html">Films</a><span class="babel-inline"></span>
         </nav>
-        <div class="decorative-text">bczovx weiqnpo xujmrlv ytreoi jshdfga pqownm</div>
+        <div class="babel-line"></div>
     </header>
     <main>
-        <div class="decorative-text">qpwoeirn cksjdhf zxvmop qwlert jxhzva yutiop</div>
+        <div class="babel-line"></div>
         <h2 class="email">
-            Ariann <em>at</em> USC <em>dot</em> edu
+            <span class="babel-inline"></span>Ariann <em>at</em> USC <em>dot</em> edu<span class="babel-inline"></span>
         </h2>
-        <p class="usc-text">This is my personal website where I share my work.</p>
-        <div class="decorative-text">loremv ypqowier jxhzna pqownvm ksjdhf rtuyop</div>
+        <p class="usc-text"><span class="babel-inline"></span>This is my personal website where I share my work.<span class="babel-inline"></span></p>
+        <div class="babel-line"></div>
     </main>
     <script src="random-text.js"></script>
 </body>
