Integrated Fibonacci & Golden Ratio for text refresh cycle

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <header>
         <div class="babel-line"></div>
         <h1>
-            <span class="babel-inline"></span><span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span><span class="babel-inline"></span>
+            <span class="babel-inline"></span><span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span>
+            <span class="babel-inline"></span>
             <br>
             <span class="babel-inline"></span><span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span><span class="babel-inline"></span>
         </h1>
