Final layout fixes, wall of text effect, and name update

--- a/index.html
+++ b/index.html
@@ -3,34 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nazarian's Website</title>
+    <title>Arian Nazarian's Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="babel-line"></div>
         <h1>
-            <span class="babel-inline"></span><span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span>
-            <span class="babel-inline"></span>
-            <br>
-            <span class="babel-inline"></span><span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span><span class="babel-inline"></span>
+            <span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span>
+            <span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span>
         </h1>
-        <div class="babel-line"></div>
         <nav>
-            <span class="babel-inline"></span><a href="papers.html">Papers</a><span class="babel-inline"></span>
-            <a href="photos.html">Photos</a><span class="babel-inline"></span>
-            <a href="films.html">Films</a><span class="babel-inline"></span>
+            <a href="papers.html">Papers</a>
+            <a href="photos.html">Photos</a>
+            <a href="films.html">Films</a>
         </nav>
-        <div class="babel-line"></div>
     </header>
     <main>
-        <div class="babel-line"></div>
         <h2 class="email">
             <span class="babel-inline"></span>Ariann <em>at</em> USC <em>dot</em> edu<span class="babel-inline"></span>
         </h2>
-        <p class="usc-text"><span class="babel-inline"></span>This is my personal website where I share my work.<span class="babel-inline"></span></p>
-        <div class="babel-line"></div>
+        <p class="personal-text"><span class="babel-inline"></span>This is my personal website where I share my work.<span class="babel-inline"></span></p>
     </main>
+    <div class="babel-wall"></div> <!-- Wall of Random Text -->
     <script src="random-text.js"></script>
 </body>
 </html>
+
