Changed background to white below the header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>
-            <span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span>
+            <span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span><br>
             <span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span>
         </h1>
         <nav>
@@ -20,12 +20,10 @@
     </header>
     <main>
         <h2 class="email">
-            <span class="babel-inline"></span>Ariann <em>at</em> USC <em>dot</em> edu<span class="babel-inline"></span>
+            Ariann <em>at</em> USC <em>dot</em> edu
         </h2>
-        <p class="personal-text"><span class="babel-inline"></span>This is my personal website where I share my work.<span class="babel-inline"></span></p>
+        <p class="personal-text">This is my personal website where I share my work.</p>
     </main>
-    <div class="babel-wall"></div> <!-- Wall of Random Text -->
-    <script src="random-text.js"></script>
 </body>
 </html>
 
