Fixed quote break issue on mobile, email lowercase fix, text standardization

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>
-            <span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span><br>
+        <h1 class="quote-container">
+            <span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span>
             <span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span>
         </h1>
         <nav>
@@ -20,10 +20,11 @@
     </header>
     <main>
         <h2 class="email">
-            Ariann <em>at</em> USC <em>dot</em> edu
+            <span class="lowercase">a</span>riann <em>at</em> USC <em>dot</em> edu
         </h2>
         <p class="personal-text">This is my personal website where I share my work.</p>
     </main>
 </body>
 </html>
+
 
