Refactored code for elegance and efficiency, ensured proper quote layout

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <h1 class="quote-container">
-            <span class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</span>
-            <span class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></span>
+            <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
+            <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
         </h1>
         <nav>
             <a href="papers.html">Papers</a>
@@ -26,5 +26,3 @@
     </main>
 </body>
 </html>
-
-
