Updated photos page to remove extra text

--- a/films.html
+++ b/films.html
@@ -7,38 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1 class="quote-container">
-            <div class="quote">"You step into the Road, and if you don’t keep your feet, there is no telling where you might be swept off to."</div>
-            <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
-        </h1>
+    <header class="category-header">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="papers.html">Papers</a>
-            <a href="photos.html">Photos</a>
+            <a href="index.html" class="back-link">&lt; Films</a>
         </nav>
     </header>
     <main>
-        <div class="page-title-container">
-            <a href="index.html" class="home-link">Home</a>
-            <h2 class="page-title">Films</h2>
-        </div>
-
         <p class="sub-quote">"It's the job that's never started as takes longest to finish." - J.R.R. Tolkien, <em>The Mirror of Galadriel, The Fellowship of the Ring</em></p>
-
-        <p>Here are some of my short films:</p>
-
-        <div class="video-gallery">
-            <video controls width="640">
-                <source src="films/film1.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-
-            <video controls width="640">
-                <source src="films/film2.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
     </main>
 </body>
 </html>
+
