--- a/papers.html
+++ b/papers.html
@@ -7,31 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1 class="quote-container">
-            <div class="quote">"You step into the Road, and if you don’t keep your feet, there is no telling where you might be swept off to."</div>
-            <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
-        </h1>
+    <header class="category-header">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="photos.html">Photos</a>
-            <a href="films.html">Films</a>
+            <a href="index.html" class="back-link">&lt; Papers</a>
         </nav>
     </header>
     <main>
-        <div class="page-title-container">
-            <a href="index.html" class="home-link">Home</a>
-            <h2 class="page-title">Papers</h2>
-        </div>
-
         <p class="sub-quote">"It's the job that's never started as takes longest to finish." - J.R.R. Tolkien, <em>The Mirror of Galadriel, The Fellowship of the Ring</em></p>
-
-        <p>Welcome to my collection of academic papers. Click a title to view:</p>
-
-        <ul>
-            <li><a href="papers/paper1.pdf" target="_blank">Paper 1 Title</a></li>
-            <li><a href="papers/paper2.pdf" target="_blank">Paper 2 Title</a></li>
-        </ul>
     </main>
 </body>
 </html>
+
