--- a/photos.html
+++ b/photos.html
@@ -7,31 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1 class="quote-container">
-            <div class="quote">"You step into the Road, and if you don’t keep your feet, there is no telling where you might be swept off to."</div>
-            <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
-        </h1>
+    <header class="category-header">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="papers.html">Papers</a>
-            <a href="films.html">Films</a>
+            <a href="index.html" class="back-link">&lt; Photos</a>
         </nav>
     </header>
     <main>
-        <div class="page-title-container">
-            <a href="index.html" class="home-link">Home</a>
-            <h2 class="page-title">Photos</h2>
-        </div>
-
         <p class="sub-quote">"It's the job that's never started as takes longest to finish." - J.R.R. Tolkien, <em>The Mirror of Galadriel, The Fellowship of the Ring</em></p>
-
-        <p>Here are some of my favorite photos from my travels:</p>
-
-        <div class="gallery">
-            <img src="photos/photo1.jpg" alt="Description of Photo 1">
-            <img src="photos/photo2.jpg" alt="Description of Photo 2">
-        </div>
     </main>
 </body>
 </html>
+
