Updated category pages to match home page styling

--- a/films.html
+++ b/films.html
@@ -11,10 +11,12 @@
         <nav>
             <a href="index.html" class="back-link">&lt; Films</a>
         </nav>
+        <h1 class="quote-container">
+            <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
+            <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
+        </h1>
     </header>
-    <main>
-        <p class="sub-quote">"It's the job that's never started as takes longest to finish." - J.R.R. Tolkien, <em>The Mirror of Galadriel, The Fellowship of the Ring</em></p>
-    </main>
 </body>
 </html>
+
 
