--- a/papers.html
+++ b/papers.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <header class="category-header">
-        <nav>
+        <nav class="category-nav">
             <a href="index.html" class="back-link">&lt; Papers</a>
         </nav>
-        <h1 class="quote-container">
-            <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
-            <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
-        </h1>
     </header>
+    <h1 class="quote-container">
+        <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
+        <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
+    </h1>
 </body>
 </html>
+
 
 
