Fixed quote position, aligned < Category, kept links white

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
             <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
         </h1>
-        <nav>
-            <a href="papers.html">Papers</a>
-            <a href="photos.html">Photos</a>
-            <a href="films.html">Films</a>
+        <nav class="category-nav">
+            <a href="papers.html" class="category-link">Papers</a>
+            <a href="photos.html" class="category-link">Photos</a>
+            <a href="films.html" class="category-link">Films</a>
         </nav>
     </header>
     <main>
@@ -26,6 +26,8 @@
     </main>
 </body>
 </html>
+
+
 
 
 
