--- a/photos.html
+++ b/photos.html
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="category-header">
+    <header>
         <nav class="category-nav">
-            <a href="index.html" class="back-link">&lt; Photos</a>
+            <span class="hidden-category">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <a href="index.html" class="category-link">&lt; Photos</a>
+            <span class="hidden-category">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         </nav>
+        <h1 class="quote-container">
+            <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
+            <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
+        </h1>
     </header>
-    <h1 class="quote-container">
-        <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
-        <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
-    </h1>
 </body>
 </html>
+
+
 
 
 
