Moved < Category links inside header while keeping alignment

--- a/papers.html
+++ b/papers.html
@@ -8,18 +8,19 @@
 </head>
 <body>
     <header>
-        <nav class="category-nav">
-            <a href="index.html" class="category-link">&lt; Papers</a>
-            <span class="hidden-category">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            <span class="hidden-category">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        </nav>
         <h1 class="quote-container">
             <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
             <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
         </h1>
+        <nav class="category-nav">
+            <a href="index.html" class="category-link">&lt; Papers</a>
+            <span class="hidden-category"></span>
+            <span class="hidden-category"></span>
+        </nav>
     </header>
 </body>
 </html>
+
 
 
 
