Added Time Traveler's Clock with matching years

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             <span class="lowercase">a</span>riann <em>at</em> USC <em>dot</em> edu
         </h2>
         <p class="personal-text">This is my personal website where I share my work.</p>
+        <section id="time-travel-clock">
+            <h2 id="current-time"></h2>
+            <p class="travel-text">The time traveler's clock can take you there… or rather, to then.</p>
+            <p id="matching-years"></p>
+        </section>
+        
+        <!-- Link to JavaScript file -->
+        <script src="time-travel.js"></script>        
     </main>
 </body>
 </html>
