--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
             <span class="lowercase">a</span>riann <em>at</em> USC <em>dot</em> edu
         </h2>
         <p class="personal-text">This is my personal website where I share my work.</p>
+
+        <!-- Time Traveler's Clock Section -->
         <section id="time-travel-clock">
             <h2 id="current-time"></h2>
             <p class="travel-text">The time traveler's clock can take you there… or rather, to then.</p>
             <p id="matching-years"></p>
+            <p class="travel-quote">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
         </section>
-        
-        <!-- Link to JavaScript file -->
-        <script src="time-travel.js"></script>        
     </main>
+
+    <!-- Link to JavaScript file -->
+    <script src="time-travel.js"></script>
 </body>
 </html>
 
