Fixed category quotes placement inside <body> section

--- a/films.html
+++ b/films.html
@@ -13,16 +13,13 @@
             <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
         </h1>
         <nav class="category-nav">
-            <span class="hidden-category"></span>
-            <span class="hidden-category"></span>
             <a href="index.html" class="category-link">&lt; Films</a>
         </nav>
     </header>
+
+    <main>
+        <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
+    </main>
+
 </body>
 </html>
-
-
-
-
-
-
