--- a/papers.html
+++ b/papers.html
@@ -14,12 +14,17 @@
         </h1>
         <nav class="category-nav">
             <a href="index.html" class="category-link">&lt; Papers</a>
-            <span class="hidden-category"></span>
-            <span class="hidden-category"></span>
         </nav>
     </header>
+
+    <main>
+        <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
+    </main>
+
 </body>
 </html>
+
+
 
 
 
