Optimized and cleaned up code without changing behavior

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
 </head>
 <body>
     <header>
-        <h1 class="quote-container">
+        <section class="quote-container">
             <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
             <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
-        </h1>
+        </section>
         <nav class="category-nav">
             <a href="papers.html" class="category-link">Papers</a>
             <a href="photos.html" class="category-link">Photos</a>
             <a href="films.html" class="category-link">Films</a>
         </nav>
     </header>
+
     <main>
         <h2 class="email">
-            <span class="lowercase">a</span>riann <em>at</em> USC <em>dot</em> edu
+            <span class="lowercase">a</span>ariann <em>at</em> USC <em>dot</em> edu
         </h2>
         <p class="personal-text">This is my personal website where I share my work.</p>
 
@@ -37,8 +38,3 @@
     <script src="time-travel.js"></script>
 </body>
 </html>
-
-
-
-
-
