Restored homepage behavior while keeping optimized structure

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <section class="quote-container">
+        <h1 class="quote-container">
             <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
             <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
-        </section>
-        <nav class="category-nav">
-            <a href="papers.html" class="category-link">Papers</a>
-            <a href="photos.html" class="category-link">Photos</a>
-            <a href="films.html" class="category-link">Films</a>
+        </h1>
+        <nav>
+            <a href="papers.html">Papers</a>
+            <a href="photos.html">Photos</a>
+            <a href="films.html">Films</a>
         </nav>
     </header>
 
@@ -34,7 +34,6 @@
         </section>
     </main>
 
-    <!-- Link to JavaScript file -->
     <script src="time-travel.js"></script>
 </body>
 </html>
