Fixed email formatting to display as 'ariann' instead of 'aariann'

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <h2 class="email">
-            <span class="lowercase">a</span>ariann <em>at</em> USC <em>dot</em> edu
+            <span class="lowercase">a</span>riann <em>at</em> USC <em>dot</em> edu
         </h2>
         <p class="personal-text">This is my personal website where I share my work.</p>
 
