Updated Eternal Watch feature to hide current year from frozen time display

--- a/index.html
+++ b/index.html
@@ -25,11 +25,29 @@
         </h2>
         <p class="personal-text">This is my personal website where I share my work.</p>
 
-        <!-- Time Traveler's Clock Section -->
-        <section id="time-travel-clock">
-            <h2 id="current-time"></h2>
-            <p class="travel-text">The time traveler's clock can take you there… or rather, to then.</p>
-            <p id="matching-years"></p>
+        <!-- The Eternal Watch Section -->
+        <section id="eternal-watch">
+            <h2 id="eternal-title" class="clickable">The Eternal Watch</h2>
+            <h2 id="current-time" class="clickable"></h2>
+            
+            <div id="hidden-text" class="hidden">
+                <p class="watch-text">N U M  L O N G I U S  E R R A V I ?</p>
+                <p class="watch-description">
+                    The machine’s workings are broken, its dial frozen—fixed upon my arrival in month, week, day, and hour.
+                    In time’s vast turning, I hope to see this moment return. No—this moment shall return, and somehow, I with it.
+                </p>
+                <p class="watch-description">
+                    With no small astonishment, I behold the machine’s restraint, for though it bears me backward, it does so with unyielding precision.
+                    An unmoving face stands as both beacon and shackle, tethering my descent through history to when time’s ceaseless reflections turn to greet their likeness.
+                </p>
+                <p class="watch-description">
+                    Thus, I am no master of time, but its prisoner—bound to instants where pasts meet this same, immutable hour.
+                </p>
+                <p id="reveal-matching" class="clickable">Q U O  A U T  Q U A N D O  V A D I S ?</p>
+                <p id="reveal-matching-alt" class="clickable">"This time traveler's watch can take you there… or rather, to then."</p>
+            </div>
+
+            <p id="matching-years" class="hidden"></p>
             <p class="travel-quote">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
         </section>
     </main>
