--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                     In time’s vast turning, I hope to see this moment return. No—this moment shall return, and somehow, I with it.
                 </p>
                 <p class="watch-description">
-                    With no small astonishment, I behold the machine’s restraint, for though it bears me backward, it does so with unyielding precision.
+                    With no small astonishment, I behold the machine’s restraint, for though it bears me backwards, it does so with unyielding precision.
                     An unmoving face stands as both beacon and shackle, tethering my descent through history to when time’s ceaseless reflections turn to greet their likeness.
                 </p>
                 <p class="watch-description">
                     Thus, I am no master of time, but its prisoner—bound to instants where pasts meet this same, immutable hour.
                 </p>
                 <p id="reveal-matching" class="clickable">Q U O  A U T  Q U A N D O  V A D I S ?</p>
-                <p id="reveal-matching-alt" class="clickable">"This time traveler's watch can take you there… or rather, to then."</p>
+                <p id="reveal-matching-alt" class="clickable">"This time traveller's watch can take you there… or rather, to then."</p>
             </div>
 
             <p id="matching-years" class="hidden"></p>
