Updated clickable story text with down arrow

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <!-- The Eternal Watch Section -->
         <section id="eternal-watch">
-            <h2 id="eternal-title" class="clickable">The Eternal Watch</h2>
+            <h2 id="eternal-title" class="clickable">The Eternal Watch ▼</h2>
             <h2 id="current-time" class="clickable"></h2>
             
             <div id="hidden-text" class="hidden">
@@ -44,7 +44,7 @@
                     Thus, I am no master of time, but its prisoner—bound to instants where pasts meet this same, immutable hour.
                 </p>
                 <p id="reveal-matching" class="clickable">Q U O  A U T  Q U A N D O  V A D I S</p>
-                <p id="reveal-matching-alt" class="clickable">"This time traveller's watch can take you there… or rather, to then."</p>
+                <p id="reveal-matching-alt" class="clickable">This time traveller's watch can take you there… or rather, to then. ▼</p>
             </div>
 
             <p id="matching-years" class="hidden"></p>
