Fix ▲▼ functionality to The Eternal Watch and matching years

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2 id="current-time" class="clickable"></h2>
             
             <div id="hidden-text" class="hidden">
-                <p class="watch-text">N U M  L O N G I U S  E R R A V I</p>
+                <p class="watch-text bold-text">N U M  L O N G I U S  E R R A V I</p>
                 <p class="watch-description">
                     The machine’s workings are broken, its dial frozen—fixed upon my arrival in month, week, day, and hour.
                     In time’s vast turning, I hope to see this moment return. No—this moment shall return, and somehow, I with it.
@@ -43,8 +43,8 @@
                 <p class="watch-description">
                     Thus, I am no master of time, but its prisoner—bound to instants where pasts meet this same, immutable hour.
                 </p>
-                <p id="reveal-matching" class="clickable">Q U O  A U T  Q U A N D O  V A D I S</p>
-                <p id="reveal-matching-alt" class="clickable">
+                <p id="reveal-matching" class="clickable bold-text">Q U O  A U T  Q U A N D O  V A D I S</p>
+                <p id="reveal-matching-alt" class="clickable bold-text">
                     This time traveller's watch can take you there… or rather, to then. <span id="watch-arrow">▼</span>
                 </p>
             </div>
