--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
             <h2 id="current-time" class="clickable"></h2>
             
             <div id="hidden-text" class="hidden">
-                <p class="watch-text bold-text">N U M  L O N G I U S  E R R A V I</p>
+                <p class="watch-text bold-text">NUM LONGIUS ERRAVI</p>
                 <p class="watch-description">
-                    The machine’s workings are broken, its dial frozen—fixed upon my arrival in month, week, day, and hour.
-                    In time’s vast turning, I hope to see this moment return. No—this moment shall return, and somehow, I with it.
+                    The machine’s workings are broken, its dial frozen—fixed upon my arrival in month, week, day, and hour. As I drift across years of measured turning, I long to meet this moment's return. No—this moment shall return, and somehow, I with it.
                 </p>
+                <p class="watch-text bold-text">ITERUM CONVENIMUS</p>
                 <p class="watch-description">
                     With no small astonishment, I behold the machine’s restraint, for though it bears me backwards, it does so with unyielding precision.
                     An unmoving face stands as both beacon and shackle, tethering my descent through history to when time’s ceaseless reflections turn to greet their likeness.
                 </p>
                 <p class="watch-description">
-                    Thus, I am no master of time, but its prisoner—bound to instants where pasts meet this same, immutable hour.
+                    Thus, I am no master of time, but its prisoner—immutably bound to instants where pasts converge.
                 </p>
                 <p id="reveal-matching-alt" class="clickable bold-text">
                     This time traveller's watch can take you there… or rather, to then. <span id="watch-arrow">▼</span>
                 </p>
-                <p id="reveal-matching" class="clickable bold-text">Q U O  A U T  Q U A N D O  V A D I S</p>
+                <p id="reveal-matching" class="clickable bold-text">QUO AUT QUANDO VADIS</p>
                
             </div>
 
