--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
             <div id="hidden-text" class="hidden">
                 <p class="watch-text bold-text">NUM LONGIUS ERRAVI</p>
                 <p class="watch-description">
-                    The machine’s workings are broken, its dial frozen—fixed upon my arrival in month, week, day, and hour. As I drift across years of measured turning, I long to meet this moment's return. No—this moment shall return, and somehow, I with it.
+                    The machine’s workings have broken, its dial frozen—fixed upon my arrival in month, week, day, and hour. As I drift across years of measured turning, I long to meet this moment's return. No—this moment shall return, and somehow, I with it.
                 </p>
                 <p class="watch-text bold-text">ITERUM CONVENIMUS</p>
                 <p class="watch-description">
                     With no small astonishment, I behold the machine’s restraint, for though it bears me backwards, it does so with unyielding precision.
                     An unmoving face stands as both beacon and shackle, tethering my descent through history to when time’s ceaseless reflections turn to greet their likeness.
                 </p>
+                <p class="watch-text bold-text">QUO AUT QUANDO VADIS</p>
                 <p class="watch-description">
                     Thus, I am no master of time, but its prisoner—immutably bound to instants where pasts converge.
                 </p>
                 <p id="reveal-matching-alt" class="clickable bold-text">
                     This time traveller's watch can take you there… or rather, to then. <span id="watch-arrow">▼</span>
                 </p>
-                <p id="reveal-matching" class="clickable bold-text">QUO AUT QUANDO VADIS</p>
                
             </div>
 
