--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
                 <p id="reveal-matching-alt" class="clickable bold-text">
                     This time traveller's watch can take you there… or rather, to then. <span id="watch-arrow">▼</span>
                 </p>
-               
             </div>
 
+            <!-- Coordinate Reflections Section -->
             <p id="matching-years" class="hidden"></p>
+
             <p class="travel-quote">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
         </section>
     </main>
