Added hidden looping audio with fade-in for The Eternal Watch

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h2 id="current-time" class="clickable"></h2>
 
     <!-- Hidden Audio Element -->
-    <audio id="eternal-audio" src="/assets/audio/timepiece.mp3" loop></audio>
+    <audio id="eternal-audio" src="assets/audio/timepiece.mp3" loop></audio>
 
     <div id="hidden-text" class="hidden">
         <p class="watch-text bold-text">NUM LONGIUS ERRAVI</p>
