Restored music and fixed Latin-English toggle

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <h2 id="current-time" class="clickable"></h2>
             
             <div id="hidden-text" class="hidden">
-                <!-- Latin phrases with click-to-toggle functionality -->
                 <p id="num-nimis-erravi" class="toggle-text clickable bold-text">NUM NIMIS ERRAVI</p>
                 <p class="watch-description">
                     The machine’s workings have broken, its dial frozen—fixed upon my arrival in month, week, day, and hour. 
@@ -57,6 +56,9 @@
             <p id="matching-years" class="hidden"></p>
             <p class="travel-quote">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
         </section>
+
+        <!-- Audio element for The Eternal Watch -->
+        <audio id="eternal-audio" src="assets/audio/timepiece.mp3" preload="auto"></audio>
     </main>
 
     <script src="time-travel.js"></script>
