Restored personal text below email

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2 class="email">
             <span class="lowercase">a</span>riann <em>at</em> USC <em>dot</em> edu
         </h2>
-        <p id="encrypted-text" class="personal-text"></p>
+        <p id="encrypted-text" class="personal-text">This is my personal website where I share my work.</p>
 
         <!-- The Eternal Watch Section -->
         <section id="eternal-watch">
