Replaced header quote with static image

--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
 </head>
 <body>
     <header>
-        <h1 class="quote-container">
-            <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
-            <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
-        </h1>
+        <img src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business" class="header-image">
         <nav>
             <a href="papers.html">Papers</a>
             <a href="photos.html">Photos</a>
             <a href="films.html">Films</a>
         </nav>
-    </header>
+    </header>    
 
     <main>
         <h2 class="email">
