--- a/papers.html
+++ b/papers.html
@@ -8,14 +8,12 @@
 </head>
 <body>
     <header>
-        <h1 class="quote-container">
-            <div class="quote">"NO ADMITTANCE EXCEPT ON PARTY BUSINESS"</div>
-            <div class="author">- J.R.R. Tolkien, <em>The Lord of the Rings</em></div>
-        </h1>
-        <nav class="category-nav">
-            <a href="index.html" class="category-link">&lt; Papers</a>
+        <img src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business" class="header-image">
+        <nav>
+            <a href="index.html"><span class="back-arrow">&lt;</span> Papers</a>
         </nav>
     </header>
+    
 
     <main>
         <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
