Optimized images and JavaScript efficiency

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <img src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business" class="header-image">
+        <picture>
+            <source srcset="assets/images/no-admittance.webp" type="image/webp">
+            <img src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business" class="header-image" loading="lazy">
+        </picture>        
         <nav>
             <a href="papers.html">Papers</a>
             <a href="photos.html">Photos</a>
