--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             <h2 id="current-time" class="clickable" role="button" aria-expanded="false"></h2>
             
             <div id="hidden-text" class="hidden" aria-hidden="true">
-                <p class="watch-text toggle-text" id="num-nimis-erravi" role="button">NUM NIMIS ERRAVI</p>
+                <p class="watch-text toggle-text bold-text" id="num-nimis-erravi" role="button">NUM NIMIS ERRAVI</p>
                 <p class="watch-description">
                     The machine’s workings have broken, its dial frozen—fixed upon my arrival in month, week, day, and hour. As I drift across years of measured turning, I long to meet this moment's return. No—this moment shall return, and somehow, I with it.
                 </p>
-                <p class="watch-text toggle-text" id="iterum-nos-convenimus" role="button">ITERUM NOS CONVENIMUS</p>
+                <p class="watch-text toggle-text bold-text" id="iterum-nos-convenimus" role="button">ITERUM NOS CONVENIMUS</p>
                 <p class="watch-description">
                     With no small astonishment, I behold the machine’s restraint, for though it bears me backwards, it does so with unyielding precision.
                     An unmoving face stands as both beacon and shackle, tethering my descent through history to when time’s ceaseless reflections turn to greet their likeness.
                 </p>
-                <p class="watch-text toggle-text" id="quo-vel-quando-vadis" role="button">QUO VEL QUANDO VADIS</p>
+                <p class="watch-text toggle-text bold-text" id="quo-vel-quando-vadis" role="button">QUO VEL QUANDO VADIS</p>
                 <p class="watch-description">
                     Thus, I am no master of time, but its prisoner—immutably bound to instants where pasts converge.
                 </p>
@@ -52,6 +52,9 @@
             </div>
 
             <p id="matching-years" class="hidden" aria-live="polite"></p>
+
+            <!-- Restored missing quote -->
+            <p class="travel-quote">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
         </section>
     </main>
 
