--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <source srcset="assets/images/no-admittance.webp" type="image/webp">
             <img src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business" class="header-image" loading="lazy">
         </picture>
-        <nav aria-label="Main navigation">
-            <a href="papers.html" aria-label="Read academic papers">Papers</a>
-            <a href="photos.html" aria-label="View travel photography">Photos</a>
-            <a href="films.html" aria-label="Watch short films">Films</a>
+        <nav>
+            <a href="papers.html">Papers</a>
+            <a href="photos.html">Photos</a>
+            <a href="films.html">Films</a>
         </nav>
     </header>
 
@@ -25,33 +25,38 @@
         </h2>
         <p class="personal-text">This is my personal website where I share my work.</p>
 
+        <!-- Audio Element -->
+        <audio id="eternal-audio" loop>
+            <source src="assets/audio/timepiece.mp3" type="audio/mpeg">
+        </audio>
+
         <!-- The Eternal Watch Section -->
         <section id="eternal-watch">
-            <h2 id="eternal-title" class="clickable" role="button" aria-expanded="false">
+            <h2 id="eternal-title" class="clickable" role="button">
                 The Eternal Watch <span id="eternal-arrow">▼</span>
             </h2>
-            <h2 id="current-time" class="clickable" role="button" aria-expanded="false"></h2>
+            <h2 id="current-time" class="clickable" role="button"></h2>
             
-            <div id="hidden-text" class="hidden" aria-hidden="true">
-                <p class="watch-text toggle-text bold-text" id="num-nimis-erravi" role="button">NUM NIMIS ERRAVI</p>
+            <div id="hidden-text" class="hidden">
+                <p class="watch-text toggle-text bold-text" id="num-nimis-erravi">NUM NIMIS ERRAVI</p>
                 <p class="watch-description">
                     The machine’s workings have broken, its dial frozen—fixed upon my arrival in month, week, day, and hour. As I drift across years of measured turning, I long to meet this moment's return. No—this moment shall return, and somehow, I with it.
                 </p>
-                <p class="watch-text toggle-text bold-text" id="iterum-nos-convenimus" role="button">ITERUM NOS CONVENIMUS</p>
+                <p class="watch-text toggle-text bold-text" id="iterum-nos-convenimus">ITERUM NOS CONVENIMUS</p>
                 <p class="watch-description">
                     With no small astonishment, I behold the machine’s restraint, for though it bears me backwards, it does so with unyielding precision.
                     An unmoving face stands as both beacon and shackle, tethering my descent through history to when time’s ceaseless reflections turn to greet their likeness.
                 </p>
-                <p class="watch-text toggle-text bold-text" id="quo-vel-quando-vadis" role="button">QUO VEL QUANDO VADIS</p>
+                <p class="watch-text toggle-text bold-text" id="quo-vel-quando-vadis">QUO VEL QUANDO VADIS</p>
                 <p class="watch-description">
                     Thus, I am no master of time, but its prisoner—immutably bound to instants where pasts converge.
                 </p>
-                <p id="reveal-matching-alt" class="clickable bold-text" role="button" aria-expanded="false">
+                <p id="reveal-matching-alt" class="clickable bold-text">
                     This time traveller's watch can take you there… or rather, to then. <span id="watch-arrow">▼</span>
                 </p>
             </div>
 
-            <p id="matching-years" class="hidden" aria-live="polite"></p>
+            <p id="matching-years" class="hidden"></p>
 
             <!-- Restored missing quote -->
             <p class="travel-quote">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
