Added fade animation to travel-quote

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
             <p id="matching-years" class="hidden"></p>
 
-            <!-- Restored missing quote -->
-            <p class="travel-quote">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
+            <!-- Travel quote now starts hidden and is toggled by "This time traveller's watch..." -->
+            <p id="travel-quote" class="hidden">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
         </section>
     </main>
 
