--- a/index.html
+++ b/index.html
@@ -38,30 +38,20 @@
             <h2 id="current-time" class="clickable" role="button"></h2>
             
             <div id="hidden-text" class="hidden">
-                <div class="fade-group">
-                    <p class="watch-text toggle-text bold-text" id="num-nimis-erravi">NUM NIMIS ERRAVI</p>
-                    <p class="watch-description">
-                        The machine’s workings have broken, its dial frozen—fixed upon my arrival in month, week, day, and hour. As I drift across years of measured turning, I long to meet this moment's return. No—this moment shall return, and somehow, I with it.
-                    </p>
-                </div>
-                
-                <div class="fade-group">
-                    <p class="watch-text toggle-text bold-text" id="iterum-nos-convenimus">ITERUM NOS CONVENIMUS</p>
-                    <p class="watch-description">
-                        With no small astonishment, I behold the machine’s restraint, for though it bears me backwards, it does so with unyielding precision.
-                        An unmoving face stands as both beacon and shackle, tethering my descent through history to when time’s ceaseless reflections turn to greet their likeness.
-                    </p>
-                </div>
-
-                <div class="fade-group">
-                    <p class="watch-text toggle-text bold-text" id="quo-vel-quando-vadis">QUO VEL QUANDO VADIS</p>
-                    <p class="watch-description">
-                        Thus, I am no master of time, but its prisoner—immutably bound to instants where pasts converge.
-                    </p>
-                </div>
-
-                <!-- "This time traveller's watch..." starts hidden and fades in after last story text -->
-                <p id="reveal-matching-alt" class="clickable bold-text hidden">
+                <p class="watch-text toggle-text bold-text" id="num-nimis-erravi">NUM NIMIS ERRAVI</p>
+                <p class="watch-description">
+                    The machine’s workings have broken, its dial frozen—fixed upon my arrival in month, week, day, and hour. As I drift across years of measured turning, I long to meet this moment's return. No—this moment shall return, and somehow, I with it.
+                </p>
+                <p class="watch-text toggle-text bold-text" id="iterum-nos-convenimus">ITERUM NOS CONVENIMUS</p>
+                <p class="watch-description">
+                    With no small astonishment, I behold the machine’s restraint, for though it bears me backwards, it does so with unyielding precision.
+                    An unmoving face stands as both beacon and shackle, tethering my descent through history to when time’s ceaseless reflections turn to greet their likeness.
+                </p>
+                <p class="watch-text toggle-text bold-text" id="quo-vel-quando-vadis">QUO VEL QUANDO VADIS</p>
+                <p class="watch-description">
+                    Thus, I am no master of time, but its prisoner—immutably bound to instants where pasts converge.
+                </p>
+                <p id="reveal-matching-alt" class="clickable bold-text">
                     This time traveller's watch can take you there… or rather, to then. <span id="watch-arrow">▼</span>
                 </p>
             </div>
@@ -72,6 +62,7 @@
             <p id="travel-quote" class="hidden">"All we have to decide is what to do with the time that is given us."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
         </section>
     </main>
+
     <script src="time-travel.js"></script>
 </body>
 </html>
