Fix: Ensure 'This time traveller’s watch...' toggles correctly and fades only once

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- The Eternal Watch Section -->
         <section id="eternal-watch">
             <h2 id="eternal-title" class="clickable" role="button">
-                The Eternal Watch <span id="eternal-arrow">▼</span>
+                The Eternal Watch <span id="eternal-arrow" class="blink-arrow">▼</span>
             </h2>
             <h2 id="current-time" class="clickable" role="button"></h2>
             
@@ -62,7 +62,7 @@
 
                 <!-- "This time traveller's watch..." starts hidden and fades in after last story text -->
                 <p id="reveal-matching-alt" class="clickable bold-text hidden">
-                    This time traveller's watch can take you there… or rather, to then. <span id="watch-arrow">▼</span>
+                    This time traveller's watch can take you there… or rather, to then. <span id="watch-arrow" class="blink-arrow">▼</span>
                 </p>
             </div>
 
