--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arian Nazarian's Website</title>
+
+    <!-- ✅ Preload Sequel Rounded for faster font loading -->
+    <link rel="preload" href="fonts/sequelrounded.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    
+    <!-- ✅ Link CSS file AFTER preloading fonts -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <picture>
