--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arian Nazarian's Website</title>
 
-    <!-- ✅ Preload Sequel Rounded for faster font loading -->
-    <link rel="preload" href="/assets/fonts/sequelrounded.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <!-- ✅ Preload Sequel Rounded Font for faster font loading -->
+    <link rel="preload" href="/assets/fonts/sequelfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     
     <!-- ✅ Link CSS file AFTER preloading fonts -->
     <link rel="stylesheet" href="style.css">
