--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Arian Nazarian's Website</title>
 
     <!-- ✅ Preload Sequel Rounded Font for faster font loading -->
-    <link rel="preload" href="/assets/fonts/sequelfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="/assets/fonts/sequelfont.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     
     <!-- ✅ Link CSS file AFTER preloading fonts -->
     <link rel="stylesheet" href="style.css">
