--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arian Nazarian's Website</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/icons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
     <link rel="shortcut icon" href="assets/icons/favicon.ico" />
