capitalized some email text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main>
         <h2 class="email">
-            <span class="lowercase">a</span>riann <em>at</em> USC <em>dot</em> edu
+            <span>ARIANN</span> <em>at</em> USC <em>dot EDU</em>
         </h2>
         <p class="personal-text">This is my personal website where I share my work.</p>
 
