added hover animations to ARIANN and EDU

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <main>
         <h2 class="email">
-            <span>ARIANN</span> <em>at</em> USC <em>dot EDU</em>
-        </h2>
+            <span class="clickable">ARIANN</span> <em>at</em> USC <em id="edu-text" class="clickable">dot EDU</em>
+        </h2>        
         <p class="personal-text">This is my personal website where I share my work.</p>
 
         <!-- Audio Element -->
