added hover animations to ARIANN and EDU

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main>
         <h2 class="email">
-            <span class="clickable">ARIANN</span> <em>at</em> USC <em>dot</em> <span id="edu-text" class="clickable">EDU</span>
+            <span class="clickable">ARIANN</span> <em>at</em> <span id="usc-text" class="clickable bold-text">USC</span> <em>dot</em> <span id="edu-text" class="clickable">EDU</span>
         </h2>             
         <p class="personal-text">This is my personal website where I share my work.</p>
 
