added fight on popup

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         </div>
     
         <div class="popup" id="popup-usc-box">
-            <p>Stay (MS)FINE and Fight On! :D</p>
+            <p>Staying (MS)FINE and Fighting On! :D</p>
             <label for="popup-close" class="close-button">close</label>
         </div>
     
         <div class="popup" id="popup-edu-box">
-            <p>I am currently pursuing an M.S. in Financial Engineering at the University of Southern California. Previously, I studied at the London School of Economics and UC Riverside, where I earned a B.A. in Economics. I also earned an A.A.-T in Economics and an A.S.-T in Film, Television, and Electronic Media from Pasadena City College. "And if we’re counting everything, I also attended preschool at USC—so really, it’s come full circle."
+            <p>I am pursuing an MS in Financial Engineering at the University of Southern California. Previously, I studied at the London School of Economics and UC Riverside, where I earned a BA in Economics. I also hold an AA-T in Economics and an AS-T in Film, Television, and Electronic Media from Pasadena City College. And if we’re counting everything, I attended preschool at USC—so really, it’s all come full circle.
             </p>
             <label for="popup-close" class="close-button">close</label>
         </div>
