added fight on popup

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
         <div class="popup" id="popup-edu-box">
             <p>I am pursuing an MS in Financial Engineering at the University of Southern California. Previously, I studied at the London School of Economics and UC Riverside, where I earned a BA in Economics. I also hold an AA-T in Economics and an AS-T in Film, Television, and Electronic Media from Pasadena City College. And if we’re counting everything, I attended preschool at USC—so really, it’s all come full circle.</p>
-            <label for="popup-reset" class="close-button">close</label>
+            <label for="popup-reset" class="close-button">lose</label>
         </div>
 
         <!-- Audio Element -->
