added clickable header photos

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <header>
-        <picture id="header-image">
-        <source id="header-source" srcset="assets/images/no-admittance.webp" type="image/webp">
-        <img id="header-img" src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business">
+        <picture>
+            <source srcset="assets/images/no-admittance.webp" type="image/webp">
+            <img src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business" class="header-image" loading="lazy">
         </picture>
         <nav>
             <a href="papers.html">Papers</a>
