--- a/papers.html
+++ b/papers.html
@@ -18,6 +18,7 @@
     <main>
         <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
     </main>
-
+    <script src="time-travel.js"></script>
+    <script src="header-toggle.js"></script> <!-- Add this line -->
 </body>
 </html>
