added clickable header photos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
         <!-- Pop-ups -->
         <div class="popup" id="popup-ariann-box">
-            <p>Hello, I'm Arian! Let's explore the curious and curiouser together.</p>
+            <p>Hello, I'm Arian! Let's explore the "curious and curiouser" together.</p>
             <label for="popup-reset" class="close-button">close</label>
         </div>
     
