--- a/index.html
+++ b/index.html
@@ -5,23 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arian Nazarian's Website</title>
     <link rel="stylesheet" href="style.css">
+    
+    <!-- Preload key assets for performance -->
+    <link rel="preload" as="image" href="assets/images/no-admittance.webp">
+    <link rel="preload" as="image" href="assets/images/no-admittance.png">
+
+    <!-- Favicons -->
     <link rel="icon" type="image/png" href="assets/icons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
     <link rel="shortcut icon" href="assets/icons/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png" />
+    
     <meta name="apple-mobile-web-app-title" content="ANweb" />
     <link rel="manifest" href="assets/icons/site.webmanifest" />
+
+    <!-- Async load JavaScript for performance -->
+    <script src="main-site.js" defer></script>
+    <script src="time-travel.js" defer></script>
 </head>
 <body>
     <header>
-        <picture id="header-image">
+        <picture id="header-image" role="button" aria-label="Toggle header image">
             <source id="header-source" srcset="assets/images/no-admittance.webp" type="image/webp">
-            <img id="header-img" src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business" class="header-image" loading="lazy">
+            <img id="header-img" src="assets/images/no-admittance.png" 
+                 alt="No Admittance Except on Party Business" 
+                 class="header-image" loading="lazy" tabindex="0">
         </picture>
         <nav>
-            <a href="papers.html">Papers</a>
-            <a href="photos.html">Photos</a>
-            <a href="films.html">Films</a>
+            <a href="papers.html" tabindex="0">Papers</a>
+            <a href="photos.html" tabindex="0">Photos</a>
+            <a href="films.html" tabindex="0">Films</a>
         </nav>
     </header>
 
@@ -104,6 +117,8 @@
         </section>
     </main>
 
-    <script src="time-travel.js"></script>
+    <footer>
+            <p>&copy; 2025 Arian Nazarian | <a href="#top">Back to Top ▲</a></p>
+    </footer>
 </body>
 </html>
