--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="time-travel.js" defer></script>
 </head>
 <body>
+    <div id="top"></div>
     <header>
         <picture id="header-image" role="button" aria-label="Toggle header image">
             <source id="header-source" srcset="assets/images/no-admittance.webp" type="image/webp">
@@ -118,7 +119,7 @@
     </main>
 
     <footer>
-            <p>&copy; 2025 Arian Nazarian | <a href="#top">Back to Top ▲</a></p>
-    </footer>
+        <p>&copy; 2025 Arian Nazarian | <a href="#top" class="clickable">Back to Top ▲</a></p>
+    </footer>    
 </body>
 </html>
