--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Arian Nazarian | <a href="#top" class="clickable">Back to Top ▲</a></p>
+        <p>&copy; 2025 Arian Nazarian | <a href="#top" class="clickable">Top ▲</a></p>
     </footer>    
 </body>
 </html>
